--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "Python",
             "type": "python",
             "request": "launch",
             "stopOnEntry": true,
+            "pythonPath": "${config:python.pythonPath}",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "cwd": "${workspaceRoot}",
+            "console": "integratedTerminal",
+            "debugOptions": [
+                //"WaitOnAbnormalExit",
+                //"WaitOnNormalExit"
+            ]
         },
         // {
         //     "name": "Python: Attach",
